# bro-xdp_packet-plugin

./: CMakeLists.txt  COPYING  README  README.md  configure.plugin
cmake/: FindKernelHeaders.cmake  FindLibBPF.cmake
scripts/: __load__.zeek  init.zeek
src/: AF_XDP.cc  AF_XDP.h  Plugin.cc  Plugin.h  XDP_BPF.cc  XDP_BPF.h  XDP_Ring.h
src/bpf/: bpf.c
tests/: btest.cfg
tests/af_xdp/: show-plugin.bro  show-plugin.zeek
